--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "^2.13.0",
     "sass": "^1.69.4"
   },
   "devDependencies": {
